--- a/Worksheets/Lab_day1.ipynb
+++ b/Worksheets/Lab_day1.ipynb
@@ -57,6 +57,10 @@
       "source": [
         "In the following exercise, we will work on getting a more intuitive understanding of Python. For this, we are using Karel the Robot, by Stanford (https://compedu.stanford.edu/karel-reader/docs/python/en/chapter1.html), which is a simple programming environment designed to teach fundamental coding concepts.\n",
         "\n",
+        "**Download the exercises here**: https://web.stanford.edu/class/archive/cs/cs106a/cs106a.1226/assignments/1-Karel/Assignment1.zip\n",
+        "\n",
+        "(After you extract Assignment1, you can open the folder in VSCode :) )\n",
+        "\n",
         "Karel operates in a grid-based world made up of rows (east-west) and columns (north-south). Karel can only stand at the intersection of a row and a column, called a corner, and must always face one of four directions: north, south, east, or west. The world may contain walls, which act as barriers Karel cannot pass through, and beepers, small objects that Karel can pick up or place.\n",
         "\n",
         "Your task is to solve exercises that guide Karel through simple and increasingly complex challenges using the following basic commands:\n",
@@ -74,17 +78,6 @@
       },
       "source": [
         "You can get creative and make as many functions as you want! The code will run exclusively what is in your main() function, you can find examples (and we highly recommend you to have a look) here: https://compedu.stanford.edu/karel-reader/docs/python/en/chapter2.html"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MA9isdR1NOY8"
-      },
-      "source": [
-        "you can download the exercises here: https://web.stanford.edu/class/archive/cs/cs106a/cs106a.1226/assignments/1-Karel/Assignment1.zip\n",
-        "\n",
-        "After you extract Assignment1, you can open the folder in VSCode :)"
       ]
     },
     {
