--- a/Worksheets/Lab_day1.ipynb
+++ b/Worksheets/Lab_day1.ipynb
@@ -220,6 +220,173 @@
         "\n",
         "There are many different algorithms you can use to solve this problem so feel free to be creative!\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# More advanced Challenges"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise Tic-Tac-Toe\n",
+        "In this Python challenge, write a function that’ll accept two numbers. These numbers will represent a position on a tic-tac-toe board. They can be 0 through 8, where 0 is the top-left spot, and 8 is the bottom-right spot.\n",
+        "\n",
+        "These parameters are two marks on the tic-tac-toe board. The function should return the number of the spot that can block these two spots from winning the game.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# put in your code here\n",
+        "def find_blocking_move(pos1, pos2):\n",
+        "    #add your code in here\n",
+        "\n",
+        "# Example:\n",
+        "print(find_blocking_move(0, 1)) # Output should be 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "TicTacToe 2.0 - Use Classes to make ...\n",
+        "\n",
+        "Instead of just a function, try ....\n",
+        "Here, we ..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise - FizzBuzz\n",
+        "The game of FizzBuzz involves counting, but replacing numbers divisible by 3 with \"Fizz\", those divisible by 5 with \"Buzz\" and those divisible by both with \"FizzBuzz\". Write a functon to play FizzBuzz, counting up to 50. We need to be careful about how we print otherwise it will look terrible in the cell, so collect all the outputs and print a list at the end."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "def fizzbuzz(num):\n",
+        "    print(f\"We are playing FizzBuzz up to {num}\")\n",
+        "    # Your code here\n",
+        "    return a_list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "num = 50\n",
+        "print(fizzbuzz(num))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise FizzBuzz2\n",
+        "\n",
+        "\n",
+        "Add up all the values in the game FizzBuzz. Note, you need to take into consideration the strings in the list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "def add_fizzbuzz(num):\n",
+        "    # Your code here\n",
+        "    return score"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "num = 50\n",
+        "print(add_fizzbuzz(num))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercise Luhn Algorithm\n",
+        "The _Luhn algorithm_ is a simple checksum formula used to validate credit card and bank account numbers. It is designed to prevent common errors in transcribing the number, and detects all single-digit errors and almost all transpositions of two adjacent digits. The algorithm may be written as the following steps:\n",
+        "1. Reverse the number.\n",
+        "2. Treating the number as a list of digits, take the even-indexed digits (where the indexes start at *1*) and double their values. If a doubled digit results in a number greater than 10, add the two digits (e.g., the digit 6 becomes 12 and hence is replaced by 1 + 2 = 3).\n",
+        "3. Sum this modified list.\n",
+        "4. If the sum of the list is divisible by 10 the credit card number is valid.\n",
+        "\n",
+        "Write a function to check whether a given credit card number is valid (replacing the `...` with your code). You can assume that you will receive a 16 digit number as a string."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "def luhn_algorithm(card_num):\n",
+        "    ...\n",
+        "    return check_sum % 10 == 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "card_num = \"4799273987136272\"\n",
+        "print(luhn_algorithm(card_num))\n",
+        "card_num = \"4799273987136273\"\n",
+        "print(luhn_algorithm(card_num))"
+      ]
     }
   ],
   "metadata": {
