--- a/Worksheets/Lab_day1.ipynb
+++ b/Worksheets/Lab_day1.ipynb
@@ -82,6 +82,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Example Video can be found in Assets/karel_video.mp4**\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "0Ox0jRd9dDnv"
       },
@@ -235,7 +242,11 @@
         "## Exercise Tic-Tac-Toe\n",
         "In this Python challenge, write a function that’ll accept two numbers. These numbers will represent a position on a tic-tac-toe board. They can be 0 through 8, where 0 is the top-left spot, and 8 is the bottom-right spot.\n",
         "\n",
-        "These parameters are two marks on the tic-tac-toe board. The function should return the number of the spot that can block these two spots from winning the game.\n"
+        "These parameters are two marks on the tic-tac-toe board. The function should return the number of the spot that can block these two spots from winning the game.\n",
+        "\n",
+        "![**Example Board**](../Assets/tic_tac_toe.png)\n",
+        "\n",
+        "**Example Board**\n"
       ]
     },
     {
@@ -260,10 +271,35 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "TicTacToe 2.0 - Use Classes to make ...\n",
+        "## Tic-Tac-Toe 2.0\n",
         "\n",
-        "Instead of just a function, try ....\n",
-        "Here, we ..."
+        "Instead of just a function, now try using **classes** to structure your Tic-Tac-Toe logic and make it more reusable and organized.  \n",
+        "\n",
+        "### **To Do This:**  \n",
+        "- Create a `TicTacToe` class with parameters:  \n",
+        "  - A board to store the game state.  \n",
+        "- Add a method to **find the blocking move**, like before.  \n",
+        "- Add a method to **mark a position** on the board.  \n",
+        "- Add a method to **display the board** in a simple way.  \n",
+        "\n",
+        "As an extension, you could try making this more flexible, for instance:\n",
+        "\n",
+        "    - Allow a dynamic board size (e.g., 4x4 or 5x5) instead of just 3x3.\n",
+        "    - Add a method to check if someone has won the game after every move.\n",
+        "    - Let players choose custom symbols (instead of just 'X' and 'O')."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# Add your code in here"
       ]
     },
     {
