--- a/Labs/Lab 6/lab.ipynb
+++ b/Labs/Lab 6/lab.ipynb
@@ -145,7 +145,52 @@
    "source": [
     "### Train a regression model\n",
     "\n",
-    "Lets train a regression model on this data. When we train a model we can import it from the scikit learn libray. "
+    "Lets train a regression model on this data. When we train a model we can import it from the scikit learn libray. When we train a model, we want to split the data into train and test datasets. The train dataset is the data that is used to train the model. We then have a test dataset of unseen data, we use this to see how the model performs on data it has not been trained on. This gives us an idea of how it will perform in the future. \n",
+    "\n",
+    "We then use the mean squared error as a metric to see how far off (on average) our model is. The lower this nuber, the better. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = ... #this should be your data (so water)\n",
+    "y = ... #this should be your labels (growth)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) #this splits\n",
+    "\n",
+    "#train the model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "#work out how good the model is on the train data\n",
+    "y_pred = model.predict(X_train)\n",
+    "mse = mean_squared_error(y_train, y_pred)\n",
+    "print(\"Mean Squared Error:\", mse)\n",
+    "\n",
+    "#work out how good the model is on test data\n",
+    "y_pred = model.predict(...)\n",
+    "mse = mean_squared_error(..., y_pred)\n",
+    "print(\"Mean Squared Error:\", mse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2 - multi linear regression\n",
+    "We might have more than one data input influencing a variable. We can use the linear regression model for more than one input. Lets say we have light and water as an input, can we use both to predict the growth?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv(\"plant_growth_sunlight_data.csv\")\n",
+    "df.head()"
    ]
   }
  ],
