--- a/Labs/Lab 6/lab.ipynb
+++ b/Labs/Lab 6/lab.ipynb
@@ -24,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, GammaRegressor, Ridge\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -185,13 +186,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Water (ml/day)</th>\n",
+       "      <th>Sunlight (hours/day)</th>\n",
+       "      <th>Plant Growth (cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>8.612790</td>\n",
+       "      <td>5.624466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59.183673</td>\n",
+       "      <td>5.073799</td>\n",
+       "      <td>9.551416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>68.367347</td>\n",
+       "      <td>5.122153</td>\n",
+       "      <td>9.916777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>77.551020</td>\n",
+       "      <td>4.362923</td>\n",
+       "      <td>12.466862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>86.734694</td>\n",
+       "      <td>5.784216</td>\n",
+       "      <td>11.674305</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Water (ml/day)  Sunlight (hours/day)  Plant Growth (cm)\n",
+       "0       50.000000              8.612790           5.624466\n",
+       "1       59.183673              5.073799           9.551416\n",
+       "2       68.367347              5.122153           9.916777\n",
+       "3       77.551020              4.362923          12.466862\n",
+       "4       86.734694              5.784216          11.674305"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df=pd.read_csv(\"plant_growth_sunlight_data.csv\")\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train multi-linear model\n",
+    "lets now train the model on more than one input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sunlight = df[...]\n",
+    "water = df[...]\n",
+    "growth = df[...]\n",
+    "\n",
+    "X = df[[...,...]] # concatenate the sunlight and water together so your data is in the format [[sunlight,water],[sunlight,water],...,[sunlight,water]]\n",
+    "y = growth\n",
+    "#now train your regression model again (copy the code from above)\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3 \n",
+    "Try out the data you have prepared above on some other regression models\n",
+    "- ridge regression\n",
+    "- random forest regression\n",
+    "- Gamma Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) #this splits\n",
+    "\n",
+    "model = GammaRegressor(alpha=0.1, max_iter=10000)  # Alpha is the regularization parameter\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "... #make predictions on the test data\n",
+    "... #print the mean square error\n",
+    "\n",
+    "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "... #make predictions on the test data\n",
+    "... #print the mean square error\n",
+    "\n",
+    "model = Ridge(alpha=1.0)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "... #make predictions on the test data\n",
+    "... #print the mean square error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do you notice anything?\n",
+    "Is there a model that works the best? Why is this the case? What happens when we play with parameters, are some models slower or use more memory? Have a google and try understand these results. \n",
+    "\n",
+    "## Task 3\n",
+    "Now you have regression models working on this dataset we can work on your gathered dataset. Complete the following tasks in the code cell below:\n",
+    "- Load in your dataset\n",
+    "- Visualise the variables against one another. If more than 2 values to visualise think of a better way to show it than scatter graphs\n",
+    "- Train different regression models on your dataset, how does it perform on unseen data? \n",
+    "- Think about conclusions from this, even if the model works does this mean your model is robust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
