--- a/Labs/Lab 6/lab.ipynb
+++ b/Labs/Lab 6/lab.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
     "from sklearn.linear_model import LinearRegression, GammaRegressor, Ridge\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +122,7 @@
    ],
    "source": [
     "df=pd.read_csv(\"plant_growth_data.csv\")\n",
+    "df.dropna()\n",
     "df.head()"
    ]
   },
@@ -131,12 +133,13 @@
    "outputs": [],
    "source": [
     "#load in the columns to variables\n",
-    "water=df['Water (ml/day)']\n",
-    "growth = df['...'] #complete this! \n",
+    "water=df['Water (ml/day)'].values\n",
+    "growth = df['...'].values  #complete this! \n",
     "\n",
     "plt.scatter(..., ...) #complete this to plot the water against the growth\n",
     "plt.xlabel(\"Water (ml/day)\")\n",
     "plt.ylabel(\"Growth (cm)\")\n",
+    "plt.title(\"Put what you want as the title\")\n",
     "plt.show()"
    ]
   },
@@ -175,6 +178,21 @@
     "mse = mean_squared_error(..., y_pred)\n",
     "print(\"Mean Squared Error:\", mse)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot errors\n",
+    "Write code that shows the test data points, and the prediction data points for the test data. Show them as different colours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -292,6 +310,27 @@
     "#now train your regression model again (copy the code from above)\n",
     "\n",
     "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visulise how your model is performing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(X_test[:,0],y_test,label=\"Actual\")\n",
+    "plt.scatter(X_test[:,0],y_pred,label=\"Predicted\")\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.xlabel(\"Water (ml/day)\")\n",
+    "plt.ylabel(\"Growth (cm)\")\n",
+    "plt.title(\"Water vs Growth\")"
    ]
   },
   {
