--- a/Labs/Lab 6/lab.ipynb
+++ b/Labs/Lab 6/lab.ipynb
@@ -147,6 +147,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Look at covariance between variables\n",
+    "\n",
+    "What do you notice? Is there a strong correlation, a weak one? Are these variables related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data = np.vstack((water, growth))\n",
+    "cov_matrix = np.cov(data)\n",
+    "\n",
+    "# Plot covariance matrix\n",
+    "plt.imshow(cov_matrix, cmap='coolwarm', interpolation='nearest')\n",
+    "plt.colorbar(label='Covariance')\n",
+    "plt.xticks([0, 1], ['X', 'Y'])\n",
+    "plt.yticks([0, 1], ['X', 'Y'])\n",
+    "plt.title('Covariance Matrix')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Train a regression model\n",
     "\n",
     "Lets train a regression model on this data. When we train a model we can import it from the scikit learn libray. When we train a model, we want to split the data into train and test datasets. The train dataset is the data that is used to train the model. We then have a test dataset of unseen data, we use this to see how the model performs on data it has not been trained on. This gives us an idea of how it will perform in the future. \n",
@@ -381,6 +409,7 @@
     "## Task 3\n",
     "Now you have regression models working on this dataset we can work on your gathered dataset. Complete the following tasks in the code cell below:\n",
     "- Load in your dataset\n",
+    "- make a covariance matrix to investigate correlation of your data points\n",
     "- Visualise the variables against one another. If more than 2 values to visualise think of a better way to show it than scatter graphs\n",
     "- Train different regression models on your dataset, how does it perform on unseen data? \n",
     "- Think about conclusions from this, even if the model works does this mean your model is robust"
